--- a/package.json
+++ b/package.json
@@ -12,11 +12,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@firebase/firestore": "^4.1.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "firebase": "^10.1.0"
+    "firebase": "^10.1.0",
+    "request-ip": "^3.3.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.17"
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/request-ip": "^0.0.38",
+    "@types/uuid": "^9.0.2"
   }
 }
