--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.18.2",
     "firebase": "^10.1.0",
     "request-ip": "^3.3.0",
+    "stripe": "^13.2.0",
     "uuid": "^9.0.0",
     "winston": "^3.10.0"
   },
