--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,5 @@
 FIREBASE_API_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_API_VERSION="2023-08-16"
-WHSEC=
+WHSEC= 
+DATABASE_URL="postgresql://postgres:<password>@<ip>:5432?schema=public"
