--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "npx ts-node prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@firebase/firestore": "^4.1.0",
+    "@prisma/client": "^5.2.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -29,6 +33,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/request-ip": "^0.0.38",
-    "@types/uuid": "^9.0.2"
+    "@types/uuid": "^9.0.2",
+    "prisma": "^5.2.0"
   }
 }
