--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./build/index.js",
   "scripts": {
-    "build": "tsc build",
+    "build": "tsc",
+    "deploy": "npm i && npm i typescript -g && npm install @prisma/client && npx prisma generate && tsc",
     "dev": "npx ts-node src/index.ts",
     "start": "node build/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
