--- a/tsconfig.json
+++ b/tsconfig.json
@@ -99,5 +99,11 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+  "include": [
+    "src/**/*.ts"  // This will only include .ts files under the src directory
+  ],
+  "exclude": [
+    "prisma/**/*.ts"  // This will exclude all .ts files under the prisma directory
+  ]
 }
