--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "./build/index.js",
   "scripts": {
-    "build": "tsc",
+    "build:dev": "tsc",
+    "build": "tsc && src/public/*.* dist/",
     "deploy": "npm i && npm i typescript -g && npm install @prisma/client && npx prisma generate && tsc",
     "dev": "npx ts-node src/index.ts",
     "start": "node build/index.js",
@@ -20,6 +21,7 @@
     "@prisma/client": "^5.3.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
+    "copyfiles": "^2.4.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
