--- a/.env.dist
+++ b/.env.dist
@@ -3,3 +3,4 @@ STRIPE_SECRET_KEY=
 STRIPE_API_VERSION="2023-08-16"
 WHSEC= 
 DATABASE_URL="postgresql://postgres:<password>@<ip>:5432?schema=public"
+BACON_PIXEl_TOKEN_SECRET=""
