--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "firebase": "^10.1.0",
+    "jsonwebtoken": "^9.0.2",
     "request-ip": "^3.3.0",
     "stripe": "^13.2.0",
     "uuid": "^9.0.1",
@@ -35,6 +36,7 @@
     "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/request-ip": "^0.0.38",
     "@types/uuid": "^9.0.2",
     "prisma": "^5.3.0"
